--- a/draft-js/package.json
+++ b/draft-js/package.json
@@ -25,11 +25,14 @@
         "@fluidframework/get-tinylicious-container": "^0.30.2",
         "@fluidframework/map": "^0.30.2",
         "@fluidframework/merge-tree": "^0.30.2",
-        "@fluidframework/protocol-definitions": "0.1012.0",
+        "@fluidframework/protocol-definitions": "^0.1016.1",
+        "@fluidframework/routerlicious-host": "^0.31.1",
         "@fluidframework/sequence": "^0.30.2",
         "@fluidframework/shared-object-base": "^0.30.2",
+        "@fluidframework/test-runtime-utils": "^0.31.1",
         "@fluidframework/view-interfaces": "^0.30.2",
         "draft-js": "^0.11.0",
+        "file-system": "^2.2.2",
         "immutable": "~3.7.4",
         "react": "^16.10.2",
         "react-dom": "^16.10.2",
@@ -38,6 +41,8 @@
     "devDependencies": {
         "@fluidframework/get-session-storage-container": "^0.30.2",
         "@fluidframework/test-tools": "0.2.3074",
+        "@fluidframework/build-common": "^0.19.2",
+        "@fluidframework/eslint-config-fluid": "^0.21.0",
         "@types/draft-js": "^0.10.34",
         "@types/expect-puppeteer": "4.4.5",
         "@types/jest": "^26.0.18",
